<resources>
    <string name="app_name">Home Workout</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_exercises">Exercises</string>
    <string name="title_plans">Plans</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_create">Create</string>
    <string name="hint_name">Name</string>
    <string name="hint_category">Category</string>
    <string name="hint_reps">Reps</string>
    <string name="btn_create_video">Create video</string>
    <string name="btn_set_duration">Set duration</string>
    <string name="hint_title">Title</string>
    <string name="btn_create_new_workout">Create new workout</string>
    <string name="tv_duration_and_reps">%1$s and %2$d reps</string>
    <string name="title_warning">Warning</string>
    <string name="txt_sure_to_delete">Are you sure to delete?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_save">Save</string>
    <string name="btn_start">Start</string>
    <string name="txt_save">Save</string>
    <string name="txt_duration_warning_rounded">If the duration and reps don\'t match with the length of the video then duration will be rounded.</string>
    <string name="menu_add_exercise_to_workout">Add this exercise to a workout</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="txt_first_add_exercises">First add some exercises. Would you like to do it now?</string>
    <string name="error_add_a_name">Add a name!</string>
    <string name="desc_create_a_new_workout">Create a new workout</string>
    <string name="desc_create_a_new_exercise">Create a new exercise</string>
    <string name="btn_stop_recording">Stop Recording</string>
    <string name="btn_start_recording">Start Recording</string>
    <string name="btn_change_video">Change Video</string>
    <string name="title_error">Error</string>
    <string name="btn_ok">OK</string>
    <string name="title_welcome">Welcome</string>
    <string name="title_new_workout">New Workout</string>
    <string name="title_new_exercise">New Exercise</string>
    <string name="title_doing_exercise">Doing Exercise</string>
    <string name="title_record_exercise">Record Exercise</string>
    <string name="title_workout">Workout</string>
    <string name="title_workout_picker">Workout Picker</string>
    <string name="tv_hours">Hours</string>
    <string name="tv_minutes">Minutes</string>
    <string name="tv_seconds">Seconds</string>
    <string name="btn_done">Done</string>
    <string name="tv_general">General</string>
    <string name="tv_duration">Duration</string>
    <string name="tv_optional_you_can_change_it_later">Optional, you can add/change it later or specify for each workout.</string>
    <string name="btn_workout">Workout</string>
    <string name="tv_day_sun">SUN</string>
    <string name="tv_day_mon">MON</string>
    <string name="tv_day_tue">TUE</string>
    <string name="tv_day_wen">WED</string>
    <string name="tv_day_thu">THU</string>
    <string name="tv_day_fri">FRI</string>
    <string name="tv_day_sat">SAT</string>
    <string name="txt_captured">Captured</string>
    <string name="txt_deleted">Deleted</string>
    <string name="txt_updated">Updated</string>
    <string name="txt_added">Added</string>
    <string name="txt_created">Created</string>
    <string name="txt_upload_failed">Upload failed</string>
</resources>